Fix collapsable behavior of inlineTooltip

--- a/app/assets/stylesheets/dante/_tooltip.scss
+++ b/app/assets/stylesheets/dante/_tooltip.scss
@@ -18,7 +18,6 @@
     pointer-events: auto;
   }
   &.is-scaled {
-    width: $tooltip-size-expanded;
     -webkit-transition-delay: 0;
     transition-delay: 0;
   }
@@ -27,8 +26,7 @@
 // MENU
 .inlineTooltip-menu {
   & {
-    display: inline-block;
-    padding-left: $tooltip-menu-spacing;
+    width: $tooltip-size-expanded;
   }
   button {
     margin-right: $tooltip-button-spacing;
@@ -40,6 +38,8 @@
 
   // BASE
   & {
+    float: left;
+    margin-right: $tooltip-menu-spacing;
     display: inline-block;
     position: relative;
     outline: 0;
@@ -93,17 +93,13 @@
       -webkit-transition: -webkit-#{$tooltip-backward-transition}, $tooltip-default-transition;
               transition: $tooltip-backward-transition, $tooltip-default-transition;
     }
-    &:nth-child(2) {
-      -webkit-transition-delay: 30ms;
-              transition-delay: 30ms;
-    }
-    &:nth-child(3) {
-      -webkit-transition-delay: 60ms;
-              transition-delay: 60ms;
-    }
-    &:nth-child(4) {
-      -webkit-transition-delay: 90ms;
-              transition-delay: 90ms;
+
+    @while $tooltip-items > 0 {
+      &:nth-child(#{$tooltip-items + 1}) {
+        -webkit-transition-delay: #{$tooltip-item-delay * $tooltip-items + "ms"};
+                transition-delay: #{$tooltip-item-delay * $tooltip-items + "ms"};
+      }
+      $tooltip-items: $tooltip-items - 1;
     }
   }
 
