--- a/app/assets/stylesheets/dante/_variables.scss
+++ b/app/assets/stylesheets/dante/_variables.scss
@@ -34,6 +34,7 @@ $tooltip-button-spacing:        9px;
 $tooltip-menu-spacing:          22px;
 
 $tooltip-items:                 3;
+$tooltip-item-delay:            30;
 $tooltip-size:                  32px;
 $tooltip-line-height:           $tooltip-size;
 
